--- a/gen/gen.vcxproj.filters
+++ b/gen/gen.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="gen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fwa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="population.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fwa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
