--- a/solver-sop/solver-sop.vcxproj
+++ b/solver-sop/solver-sop.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{F6711669-F899-4EAC-B90B-D6D44A60B016}</ProjectGuid>
+    <ProjectGuid>{7620D43D-9933-4B37-9754-BCF4F2EE9411}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>exp_fwa_rosenbrock</RootNamespace>
+    <RootNamespace>solversop</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -140,7 +140,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="exp_fwa_rosenbrock.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="optionparser.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\gen\gen.vcxproj">
